...
        
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "main-board-view"
        winText.accessibilityIdentifier = "winner-text"
        playAgainButton.setTitle("\(NSLocalizedString("play again", comment: ""))", for: .normal)
        currentPlayerText.accessibilityIdentifier = "current-player-text"
        currentPlayerText.text = "\(NSLocalizedString("current player", comment: "")): O"
    }

}


...
